--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -4,7 +4,7 @@
   "need_generate_intellisense": false,
   "docsets_to_publish": [
     {
-      "docset_name": "wh/loc",
+      "docset_name": "mtloc",
       "build_source_folder": "mt",
       "build_output_subfolder": "mt",
       "locale": "de-de",
