--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -5,9 +5,9 @@
   "docsets_to_publish": [
     {
       "docset_name": "mtloc",
-      "build_source_folder": "wh/loc",
+      "build_source_folder": "mt",
       "build_output_subfolder": "wh/loc",
-      "locale": "zh-cn",
+      "locale": "de-de",
       "version": 0,
       "open_to_public_contributors": true,
       "type_mapping": {
